<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".UserRegistration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_16dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorCardBackbround"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorImageButtonBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_perm_identity_black_24dp"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorEditTextBackgournd"
            android:ems="10"
            android:hint="@string/text_first_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_10dp"
            android:textColorHint="@color/colorTextHint"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlSymmetry" />


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorImageButtonBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_perm_identity_black_24dp"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorEditTextBackgournd"
            android:ems="10"
            android:hint="@string/text_last_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_10dp"
            android:textColorHint="@color/colorTextHint"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorImageButtonBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_mail_outline_black_24dp"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/editText4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorEditTextBackgournd"
            android:ems="10"
            android:hint="@string/text_email_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_10dp"
            android:textColorHint="@color/colorTextHint"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton3"
            app:layout_constraintTop_toTopOf="@+id/imageButton3"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlSymmetry" />


        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorImageButtonBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_phone_android_black_24dp"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/editText5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorEditTextBackgournd"
            android:ems="10"
            android:hint="@string/text_mobile_number"
            android:inputType="number"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_10dp"
            android:textColorHint="@color/colorTextHint"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton5"
            app:layout_constraintTop_toTopOf="@+id/imageButton5"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorImageButtonBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_date_range_black_24dp"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/editText6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorEditTextBackgournd"
            android:ems="10"
            android:hint="@string/text_dob"
            android:inputType="date"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_10dp"
            android:textColorHint="@color/colorTextHint"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageButton6"
            app:layout_constraintTop_toTopOf="@+id/imageButton6"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlSymmetry" />


        <ImageButton
            android:id="@+id/imageButton2222"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorImageButtonBackground"
            android:contentDescription="@string/text_password"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorEditTextBackgournd"
            android:ems="10"
            android:hint="@string/text_password"
            android:inputType="textPassword|numberPassword"
            android:maxLines="1"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorTextHint"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2222"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton2222"
            app:layout_constraintTop_toTopOf="@+id/imageButton2222" />


        <ImageButton
            android:id="@+id/imageButton1111"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorImageButtonBackground"
            android:contentDescription="@string/text_password"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/editText1111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2222" />

        <EditText
            android:id="@+id/editText1111"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorEditTextBackgournd"
            android:ems="10"
            android:hint="@string/text_confirm_password"
            android:inputType="textPassword|numberPassword"
            android:maxLines="1"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/colorTextHint"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton1111"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton1111"
            app:layout_constraintTop_toTopOf="@+id/imageButton1111"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_login_button"
            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
            android:drawableTint="@color/colorWhite"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/text_register"
            android:textColor="@color/colorWhite"
            android:tint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton1111"
            tools:ignore="RtlSymmetry"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_already_a_member_login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />


    </android.support.constraint.ConstraintLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>